corrections of colors in dark mode

--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -11,7 +11,6 @@
 }
 
 .modal {
-  background: rgb(248 250 252);
   padding: 20px;
   border-radius: 8px;
   position: relative;
